# FAST-PT

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  wheels.yml
docs/: changelog.rst  conf.py  examples.rst  installation.rst  quickstart.rst  requirements.txt
examples/: IA_ABD_plot.py  fastpt_example.py  fastpt_examples.ipynb  galaxy_bias_perturbation_example.py  hello_fastpt.py  v4_example.py
examples/deprecated/: RG_RK4_example.py  RG_STS_example.py
examples/output/: one_loop_dd_1_output.txt  one_loop_dd_3_output.txt  params.npz  (+1 more)
fast_pt.egg-info/: PKG-INFO  SOURCES.txt
fastpt/: CacheManager.py  FASTPT.py  FASTPT_simple.py  FPTHandler.py  IA_ct.py  IA_ctbias.py  IA_gb2.py  IA_ta.py  IA_tij.py  JAXPT.py  Profiler.py  Wigner_symbols.py  __init__.py  example_refactor.py  fastpttest.py  filter_Pk.py  handler_demo.py  info.py  initialize_params.py  jax_utils.py  matter_power_spt.py
paper/: IA_paper_EB_final.py  OV_paper_final.py  RSDAB_paper_final.py  fastpt_example_plot.py  kpol_paper_final.py
rg/: RG_RK4.py  RG_RK4_filt.py  RG_STS.py  __init__.py
tests/: Profiler.py  bulk_run_timer.py  camb  camb_p.txt  class  moreprocessing.py  params.ini  pk_testing.py  plin.txt  test_benchmarks.py  test_cache.py  test_cython.py  test_fastpt.py  test_handler.py  test_jaxpt.py  test_plots.py  timed_C_cacheNoJK.json  timed_cache_manager.json  timed_results_20250224_112259.json  timed_results_20250224_141143.json  timed_results_20250312_102218.json  timed_results_JKoutputCache.json  values-cmass.ini
(+77 files in other folders)
