[build-system]
# Minimum requirements for the build system to execute.
requires = ["setuptools", "wheel"]  # PEP 508 specifications.
build-backend = "setuptools.build_meta"

[project]
name = "fast-pt"
dynamic = ["version"]
requires-python = ">=3.5"
description = "Code to calculate quantities in cosmological perturbation theory at 1-loop."
readme = "README.md"
license = { file = "LICENSE", text = "MIT" }
authors = [
    { name = "Joseph E. McEwen" }, 
    { name = "Xiao Fang" }, 
    { name = "Jonathan Blazek", email = "blazek@berkeley.edu" }
    ]
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3',
    'Topic :: Scientific/Engineering :: Astronomy',
    'Topic :: Scientific/Engineering :: Physics'
]
keywords = [
    'FASTPT',
    'FAST-PT',
    'Perturbation-Theory'
]
dependencies = [
    "numpy>=1.17",
    "scipy>=1.2",
    "matplotlib>=3.0"
]

[project.optional-dependencies]

[project.urls]
homepage = "https://github.com/jablazek/FAST-PT"

# Not sure if you need to be this explicit or not.
[tool.setuptools.packages.find]
where = ["."]
include = ["fastpt*"]

# [tool.setuptools.dynamic]
# version = {attr = "fastpt.__version__"}